syntax = "proto3";

service Subscriber {
  rpc RequestTopic(Request) returns (Message) {}
  rpc ListenTopic(ListenerID) returns (stream Message) {}
}
message ListenerID{
  string id = 1;
}
message Message {
  string body = 1;
}

message Request {
  ListenerID listener = 1;
  string topic = 2 ;
}
